--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,7 @@ node_modules/
 /config/application.yml
 /config/secrets.yml
 /config/database.yml
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
