--- a/config/settings.yml
+++ b/config/settings.yml
@@ -13,3 +13,10 @@ comment:
   content:
     maximum: 255
     minimum: 10
+borrow:
+  validate_date: "Start date should be before end date"
+  not_over_7_days: "not over 7 days"
+  bigger_time_now: "Time is shorter than time"
+  day: 7
+  per_page: 10
+  index: 1
